--- a/base/templates/base/form_add_review.html
+++ b/base/templates/base/form_add_review.html
@@ -2,10 +2,18 @@
 
 {% block content %}
     <div class="center" style="vertical-align: top">
+        <h1> Add new review to <i>{{ book}}</i></h1>
         <form action="" method="post">
             {% csrf_token %}
-            {{ form.as_p }}
+        {% for field in form %}
+            <div class="basic-form">
+            {{ field.label_tag }}
+            {{ field }}
+            </div>
+        {% endfor %}
+        <div class="submit-button">
             <input type="submit" value="Submit">
+        </div>
         </form>
     </div>
 {% endblock %}
