--- a/base/templates/base/password_reset.html
+++ b/base/templates/base/password_reset.html
@@ -4,13 +4,20 @@
 {% block content %}
 
 	<div class="center">
-  	 	<h2>Reset Password</h2>
-		<hr>
-		<p>Forgotten your password? Enter your email address below, and we'll email instructions for setting a new one.</p>
+  	 	<h1>Reset Password</h1>
+{#		<hr>#}
+
         <form method="POST">
             {% csrf_token %}
-                {{ password_reset_form }}
-            <button type="submit">Send email</button>
+        <p>Forgotten your password?<br> Don't worry! <br>Enter your email address below, and we'll email instructions for setting a new one.</p>
+                {% for field in password_reset_form %}
+                    <div class="text-filed">
+                        {{ field.form }}
+                    </div>
+                {% endfor %}
+            <div class="submit-button">
+                <button type="submit">Send email</button>
+            </div>
         </form>
   	</div> 
 
