all css to form completed

--- a/base/templates/base/password_reset_confirm.html
+++ b/base/templates/base/password_reset_confirm.html
@@ -4,14 +4,14 @@
 
   
     <div class="center">
-	    <h2>Password Reset Confirm</h2>
-		<hr>
-        <p>Please enter your new password.</p>
+	    <h1>Password Reset Confirm</h1>
+
+
         <form method="POST">
             {% csrf_token %}
             {% for field in form %}
-                <p>
-                    {{ field.label_tag }}<br>
+                <div class="basic-form">
+                    {{ field.label_tag }}
                     {{ field }}
                     {% if field.help_text %}
                         <small >{{ field.help_text }}</small>
@@ -19,9 +19,11 @@
                     {% for error in field.errors %}
                         <p style="color: red">{{ error }}</p>
                     {% endfor %}
-                </p>
+                </div>
             {% endfor %}
+        <div class="submit-button">
             <button type="submit">Reset password</button>
+        </div>
         </form>
     </div>
 
