--- a/base/templates/base/password_reset_complete.html
+++ b/base/templates/base/password_reset_complete.html
@@ -3,10 +3,12 @@
 {% block content %} 
   
     <div class="center">
-	    <h2>Password reset complete</h2>
+	    <h1>Password reset complete</h1>
 		<hr>
         <p>Your password has been set. You may go ahead and log in now.</p>                 
-        <a href="/login" >Log in</a>
+        <div class="submit-button">
+            <button onclick="location.href='{% url "login" %}'" >Log in</button>
+        </div>
     </div>
 
 {% endblock %}
