--- a/base/templates/base/book_reviews.html
+++ b/base/templates/base/book_reviews.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 
-<div class="book" id="in_review">
-    <div style="cursor: auto">
+<div class="book_reviews">
+    <div id="description" style="cursor: auto">
         <header>
             {{ book.title }}
             <br>
@@ -14,21 +14,29 @@
             {{ book.summary|slice:":10000" }}
         </article>
         <article>
-            <div><i>Publication date</i>: {{ book.pub_date_book }}</div>
+            <div><br><i>Publication date</i>: {{ book.pub_date_book }}</div>
             <div><i>Number of reviews</i>: {{ book.numbers_of_review }}</div>
             <div><i>Rating</i>: {{ book.stars }}</div>
         </article>
     </div>
-    <a href="{% url 'add_review' book.id %}"><b>Add review</b></a>
+    <div>
+        <a href="{% url 'add_review' book.id %}"><b>Add review</b></a>
+    </div>
     {% for review in reviews %}
-    <div class="review">
+    <div class="review ">
         <div class="review_title">{{ review.title }}</div>
         <div style="text-align: justify">{{ review.content }}</div>
         <div style="text-align: left"><i>User: {{ review.user }}</i></div>
         <div style="text-align: left"><i>{{ review.pub_date }}</i></div>
         {% if request.user == review.user %}
-        <a href="{% url 'delete_review' review.id%}">Delete</a>
-        <a href="{% url 'update_review' review.id%}">Update</a>
+            <div style="display: grid; justify-content: center; padding: 10px; grid-template-columns: 50% 50%">
+                <div class="submit-button">
+                    <button class="small" onclick="location.href='{% url "delete_review" review.id%}'" type="submit">Delete</button>
+                </div>
+                <div class="submit-button">
+                    <button class="small" onclick="location.href='{% url "update_review" review.id%}'" type="submit">Update</button>
+                </div>
+            </div>
         {% endif %}
     </div>
     {% endfor %}
