--- a/base/templates/base/profile.html
+++ b/base/templates/base/profile.html
@@ -5,25 +5,31 @@
     {% if request.user.is_authenticated %}
 
         <div id="profile_info">
-            <ul style="list-style-type: none;text-align: center">
-                <li><b>Profile Information:</b></li>
-                <li>{{ request.user.username }}</li>
-                <li>{{ request.user.email }}</li>
-                <li><a href="{% url 'password_reset' %}">Change password</a></li>
-            </ul>
+
+                <div><b>Profile Information:</b></div>
+                <div>{{ request.user.username }}</div>
+                <div>{{ request.user.email }}</div>
+                <div><a href="{% url 'password_reset' %}">Change password</a></div>
+
         </div>
-        <div>
+
             {% for review in reviews %}
-            <div class="review">
+            <div class="review ">
                 <div class="review_title">{{ review.title }} ({{ review.book.title }})</div>
                 <div style="text-align: justify">{{ review.content }}</div>
                 {% if request.user == review.user %}
-                    <a href="{% url 'update_review' review.id%}">Update</a>
-                    <a href="{% url 'delete_review' review.id%}">Delete</a>
+            <div style="display: grid; justify-content: center; padding: 10px; grid-template-columns: 50% 50%">
+                <div class="submit-button">
+                    <button class="small" onclick="location.href='{% url "delete_review" review.id%}'" type="submit">Delete</button>
+                </div>
+                <div class="submit-button">
+                    <button class="small" onclick="location.href='{% url "update_review" review.id%}'" type="submit">Update</button>
+                </div>
+            </div>
                 {% endif %}
             </div>
             {% endfor %}
-        </div>
+
     {% else %}
         <h5 style="text-align: center; color: red">You should not be here</h5>
     {% endif %}
